Integration configuration flow

--- a/custom_components/recycle/manifest.json
+++ b/custom_components/recycle/manifest.json
@@ -1,6 +1,6 @@
 {
   "codeowners": ["@iJKCode", "@LeroyVDotBe"],
-  "config_flow": false,
+  "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/iJKCode/hass-recycle",
   "domain": "recycle",
